--- a/style.css
+++ b/style.css
@@ -9,16 +9,43 @@ body {
   scroll-behavior: smooth;
 }
 
+header {
+}
+
+* {
+  margin: 0 auto;
+}
+
 #hero-canvas {
   position: fixed;
   overflow-y: hidden;
   z-index: -1;
-  
+
+  top: 0 !important;
+  left: 0 !important;
+  width: 100%;
+  height: 100vh;
+  padding: 0;
 }
 
-h1,
-h2,
-h3,
-p {
+.bg {
+  position: fixed;
+  overflow-y: hidden;
+  z-index: -2;
+  top: 0 !important;
+  left: 0 !important;
+  width: 100%;
+  height: 100vh;
+  padding: 0;
+  background-image: url("./media/mountain.jpg");
+  background-size: cover;
+  background-position: center top;
+  background-blend-mode: overlay;
+  filter: brightness(50%);
+}
+
+.section-box {
+  position: absolute;
   filter: drop-shadow(0 0 0.5em #fffb);
+  margin: 0;
 }
