--- a/style.css
+++ b/style.css
@@ -23,6 +23,14 @@ h2 {
   align-items: center;
 }
 
+.section-items {
+  display: flex;
+  background-color: rgba(0, 0, 0, 0.473);
+  backdrop-filter: blur(.25em);
+  width: 100%;
+  height: 30vh;
+}
+
 h1 {
   font-family: "Lexend Deca", "Helvetica", sans-serif;
   font-weight: 900;
